anisotropic: % K is the sensitivity to stop smooth, if K is small, thin edge is kept. K=2; lambda=0.25; g = @(d) exp(-(d./K).^2); gl = @(d) 1./(1 + (d./K).^2); repeats=50; aR = imsmooth(R, "p&m", repeats, lambda, g);
%ICGF kernel size
%F is smaller, fine vessels are enhanced
%F is higher, fine vessels are gone.
N = size(I, 1);
N=128;
%sigma = 4;
%F = 64/N;%F={4,8,16,32,64,128,...N/4}/N
F = 4/N;%F={4,8,16,32,64,128,...N/4}/N
sigma=3.7;
%F=2.1;
ticks = [-N/2:1:(N-1)/2];

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,10 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${GABOR_BINARY_DIR}/bin)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${GABOR_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${GABOR_BINARY_DIR}/lib)
 #-----------------------------------------------------
+#ITK to OpenCV bridge does not support QT5 very well in cmake,
+#so opencv should be prebuilt "no qt5" to build ITK successfully.
+#But the openCV app can still use qt5 and bridges to ITK.
+#
 #export VTK_DIR=/home/thomas/MIP/VTK/build/debug.6.3
 #export ITK_OUT=/home/thomas/MIP/ITK/build/debug.4.8.1
 set(ITK_DIR $ENV{ITK_OUT})
@@ -89,6 +93,7 @@ qt5_use_modules(DisplayImage Widgets  OpenGL Test Concurrent)
 #---------------------------------------------------------	
 add_executable( gabor 
 			gabor.cpp
+			cv_itk_filters.cpp
 			cv_filter.cpp
 			)
 
